--- a/body.css
+++ b/body.css
@@ -18,6 +18,7 @@ main {
     background-image: linear-gradient(to bottom, maroon 0%, gold 100%);
     padding-bottom:3%;
     padding-top:1%;
+    border-radius: 30px;
 }
 .row {
     display:flex;
@@ -36,6 +37,7 @@ p.education-style {
 .section-two {
     background-image: -webkit-linear-gradient(-125deg, lightblue, yellowgreen);
     padding:1%;
+    border-radius: 30px;
 }
 .project-styles {
     color:darkblue;
@@ -51,6 +53,7 @@ p.education-style {
     background-image: -webkit-linear-gradient(-125deg,ivory, lightblue );
     padding:1%;
     color:midnightblue;
+    border-radius: 30px;
 }
 .section-three ul {
     list-style-type:square;
@@ -62,7 +65,8 @@ p.education-style {
 .section-four {
     background-image: -webkit-linear-gradient(-125deg,rgb(255, 157, 0), rgb(212, 255, 0) );
     padding:1%;
-    color:
+    color:black;
+    border-radius:30px;
 }
 .section-four ul {
     list-style-type:disc;
@@ -74,7 +78,8 @@ p.education-style {
 .section-five {
     background-color: azure;
     padding:1%;
-    color:
+    color:black;
+    border-radius: 30px;
 }
 /*Ending*/
 .end {
@@ -84,4 +89,5 @@ p.education-style {
     align-items: center;
     justify-content: center;
     color:white;
+    border-radius: 30px;
 }
