--- a/header.css
+++ b/header.css
@@ -2,17 +2,9 @@ html {
     scroll-behavior: smooth;
 }
 
-a {
-    text-decoration: none;
-    color:bisque;
-    font-size:x-large;
-    font-family:cursive;
-}
-a:hover {
-    color:black;
-}
-
+/*
 nav {
+
     padding: 45px;
     background-image: linear-gradient(-125deg, orangered, rebeccapurple);
     background-repeat:no-repeat;
@@ -20,4 +12,38 @@ nav {
     text-align:justify;
     text-align-last:justify;
 }
-
+*/
+nav {
+    width: 100%;
+    position:sticky;
+    margin 20px auto;
+    z-index: 1;
+    display: flex;
+    align-items: center;
+}
+.name {
+    flex-basis: 20%;
+}
+.links {
+    flex: 1;
+    text-align: right;
+}
+.links ul li {
+        list-style: none;
+        display: inline-block;
+        margin: 0 24px;
+}
+.links ul li a {
+    color:whitesmoke;
+    text-decoration: none;
+    font-size:x-large;
+    font-family:cursive;
+}
+.links ul li a:hover {
+    color:black;
+}
+img.aiImage {
+    border-radius:20%;
+    width:100%;
+    height:auto ;
+}
